2021-08-17  Lauro Moura  <lmoura@igalia.com>

        [GLIB] Avoid getting stuck searching for revision in some cases
        https://bugs.webkit.org/show_bug.cgi?id=229199

        Reviewed by Philippe Normand.

        With an empty .git/svn, the `git svn info` command might get stuck.

        * glib/apply-build-revision-to-files.py:
        (get_build_revision):

2021-08-16  Lauro Moura  <lmoura@igalia.com>

        REGRESSION(r281079) [GLIB] API test WebKitWebsiteData/deviceidhashsalt is not waiting for title change
        https://bugs.webkit.org/show_bug.cgi?id=229174

        Reviewed by Carlos Garcia Campos.

        r281079 changed the helper method waitUntilTitleChangedTo to
        immediately return if the current title is already the expected one.

        While this is working fine in other tests, the deviceidhashsalt tries
        to load the same page twice. As the title does not change, the call
        returns right away, before the expected side effects of the load
        happen.

        This commit adds a dummy "about:blank" call between both original
        calls to make sure we track the title change correctly.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebsiteData.cpp:
        (testWebsiteDataDeviceIdHashSalt):

2021-08-16  Andres Gonzalez  <andresg_22@apple.com>

        Expose [WebAccessibilityObjectWrapper lineRectsAndText] on MacOS.
        https://bugs.webkit.org/show_bug.cgi?id=229045
        <rdar://81819301>

        Reviewed by Chris Fleizach.

        * WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
        (WTR::AccessibilityUIElement::attributedStringForElement):
        (WTR::AccessibilityUIElement::lineRectsAndText const):
        * WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
        (WTR::AccessibilityUIElement::lineRectsAndText const):

2021-08-16  Ryosuke Niwa  <rniwa@webkit.org>

        Add thread safe version of CanMakeCheckedPtr