@@ -1,3 +1,14 @@
+2021-08-17  Jonathan Bedard  <jbedard@apple.com>
+
+        [webkitcorepy] Return SourceFileLoader in find_module
+        https://bugs.webkit.org/show_bug.cgi?id=229172
+        <rdar://problem/82006256>
+
+        Reviewed by Stephanie Lewis.
+
+        * Scripts/libraries/webkitcorepy/webkitcorepy/autoinstall.py:
+        (AutoInstall.find_module): Return SourceFileLoader object in Python 3.
+
 2021-08-17  Lauro Moura  <lmoura@igalia.com>
 
         [GLIB] Avoid getting stuck searching for revision in some cases
